# intel-tex-rs-2

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  release.toml
.github/workflows/: build.yaml  generate-binaries.yaml
examples/: main.rs
src/: astc.rs  bc1.rs  bc3.rs  bc4.rs  bc5.rs  bc6h.rs  bc7.rs  etc1.rs  lib.rs
src/ispc/: ispc_texcomp_astcaarch64-pc-windows-msvc-MD.lib  ispc_texcomp_astcaarch64-pc-windows-msvc-MT.lib  ispc_texcomp_astcaarch64-pc-windows-msvc.lib  ispc_texcomp_astcx86_64-pc-windows-msvc-MD.lib  ispc_texcomp_astcx86_64-pc-windows-msvc-MT.lib  ispc_texcomp_astcx86_64-pc-windows-msvc.lib  kernel.rs  kernel_astc.rs  kernel_astcaarch64-pc-windows-msvc.lib  kernel_astcx86_64-pc-windows-msvc.lib  kernelaarch64-pc-windows-msvc.lib  kernelx86_64-pc-windows-msvc.lib
