[package]
name = "intel_tex_2"
version = "0.1.0"
authors = ["Traverse Research <opensource@traverseresearch.nl>", "Graham Wihlidal <graham@wihlidal.ca>"]
description = "Rust bindings for Intel's ISPC texture compressor."
homepage = "https://github.com/Traverse-Research/intel-tex-rs-2"
repository = "https://github.com/Traverse-Research/intel-tex-rs-2"
documentation = "https://docs.rs/intel_tex_2"
readme = "README.md"
keywords = ["texture", "image", "compress", "intel", "ispc"]
categories = ["rendering", "rendering::engine", ]
license = "MIT/Apache-2.0"
build = "build.rs"
include = [
    "src/astc.rs",
    "src/bc1.rs",
    "src/bc3.rs",
    "src/bc6h.rs",
    "src/bc7.rs",
    "src/etc1.rs",
    "src/lib.rs",
    "src/ispc/kernel_astc.rs",
    "src/ispc/kernel.rs",
    "src/ispc/ispc_texcomp_astcx86_64-pc-windows-msvc.lib",
    "src/ispc/kernel_astcx86_64-pc-windows-msvc.lib",
    "src/ispc/kernelx86_64-pc-windows-msvc.lib",
    "src/ispc/libispc_texcomp_astcx86_64-apple-darwin.a",
    "src/ispc/libkernel_astcx86_64-apple-darwin.a",
    "src/ispc/libkernelx86_64-apple-darwin.a",
    "src/ispc/libispc_texcomp_astcx86_64-unknown-linux-gnu.a",
    "src/ispc/libkernel_astcx86_64-unknown-linux-gnu.a",
    "src/ispc/libkernelx86_64-unknown-linux-gnu.a",
    "build.rs",
    "Cargo.toml",
]
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
ispc_rt = "1.0.7"

[build-dependencies]
ispc_compile = { version = "1.0.4", optional = true }
cc = { version = "1", optional = true }
ispc_rt = "1.0.7"

[features]
ispc = ["ispc_compile", "cc"]

[dev-dependencies]
ddsfile = "0.5.0"
image = "0.24.1"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
